IMPROVED HERO SECTION
...

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <div class="hero-wrapper">
             <p class="main-text1">РАЗРАБОТКА САЙТОВ</p>
             <p class="main-text2">ДЛЯ ТВОЕГО БИЗНЕСА</p>
+            <p class="description">Мы - студия web-разработки, работаем уже более 3-х лет, готовы разработать для вас сайт в кротчайшие сроки.</p>
+            <button class="additional-information">Подробнее</button>
         </div>
     </main>
 </body>
